crates/harness-monitor/src/ui/snapshots/harness_monitor__ui__tui__tests__routa_watch_tui_compact.snap
---
source: crates/harness-monitor/src/ui/tests.rs
assertion_line: 932
expression: "render_snapshot(&state, &mut cache, 96, 24)"
---
routa.js  2 dirty  1 unassigned  lines: --  loc: --  transport: socket
┌Git Status───────────────────────────────────────────────────────┐┌Diff Preview───────────────┐
│ 2 files, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktr││@@ -1,2 +1,3 @@            │
│─────────────────────────────────────────────────────────────────││-use old                   │
│> crates/harness-monitor/src/tui.rs                              ││+use new                   │
│  M  +38 -5   TM changed    4m                                   ││+use cache                 │
│  src/app/api/a2a/card/route.ts                                  ││                           │
│  D  -12      TM miss    5m                                      ││                           │
│                                                                 ││                           │
│                                                                 ││                           │
│                                                                 ││                           │
│                                                                 ││                           │
│                                                                 ││                           │
└─────────────────────────────────────────────────────────────────┘└───────────────────────────┘
┌Fitness (Entrix Fast) - PASS 91.0% (0/12) 4200ms─────────────────┐┌File Detail────────────────┐
│Dimension scores:                                                ││tui.rs                     │
│92% code_quality           w18  4/4  █████████████████████████░░ ││...es/harness-monitor/src  │
│95% api_contract           w10  2/2  ██████████████████████████░ ││Lines: ...  Size: ...  Git │
│                                                                 ││changes: ...               │
│                                                                 ││Test mapping: changed  rust│
│                                                                 ││Resolver: hybrid_heuristic │
│                                                                 ││Confidence: medium         │
└─────────────────────────────────────────────────────────────────┘└───────────────────────────┘
↑↓ select  S run sort  v run filter  u unassigned  d preview  Pg scroll  g refresh fitness  m fa
