crates/harness-monitor/src/ui/snapshots/harness_monitor__ui__tui__tests__routa_watch_tui_file_preview.snap
---
source: crates/harness-monitor/src/ui/tests.rs
assertion_line: 764
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
routa.js  2 dirty  1 unattributed  lines: --  loc: --  fitness: fast  transport: socket
┌Git Status──────────────────────────────────────────────────────────────────────────┐┌File Preview────────────────────┐
│ 2 files, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktrees                ││ 1 fn render(frame: &mut Frame) │
│────────────────────────────────────────────────────────────────────────────────────││{                               │
│> tui.rs                                        src/             M  +38 -5   TM chan││ 2     // preview               │
│  route.ts                                      card/            D  -12      TM miss││ 3 }                            │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
┌Fitness (Entrix Fast) - PASS 91.0% (0/12) 4200ms────────────────────────────────────┐┌File Detail─────────────────────┐
│Dimension scores:                                                                   ││tui.rs                          │
│92% code_quality           w18  4/4  ██████████████████████████░░                   ││crates/harness-monitor/src      │
│95% api_contract           w10  2/2  ███████████████████████████░                   ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││Test mapping: changed  rust     │
│                                                                                    ││Resolver: hybrid_heuristic      │
│                                                                                    ││Confidence: medium              │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unknown  d preview/diff  Pg scroll  f follow:on  T
