crates/harness-monitor/src/ui/snapshots/harness_monitor__ui__tui__tests__routa_watch_tui_full_runs.snap
---
source: crates/harness-monitor/src/ui/tests.rs
expression: "render_snapshot(&state, &mut cache, 180, 28)"
---
routa.js  2 dirty  1 unassigned  lines: --  loc: --  fitness: fast  transport: socket
┌Runs [Tab]───────────────────────────────┐┌Git Status───────────────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────────────────────┐
│ 1 active  2 total  2 worktree(s)  mode:u││ 2 files, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktrees                 ││@@ -1,2 +1,3 @@                                 │
│ filter:all  sort:recent  view:1-3/3     ││─────────────────────────────────────────────────────────────────────────────────────││-use old                                        │
│▶ = All                        all    2m ││> crates/harness-monitor/src/tui.rs                         M  +38 -5 TM changed   4m││+use new                                        │
│  builder  hook  all  files:2  e/i/?:1/0/││  src/app/api/a2a/card/route.ts                                D     -12 TM miss   5m││+use cache                                      │
│  ◈ ...itor task journey    active    3m ││                                                                                     ││                                                │
│  fixer  hook  codex  files:1  e/i/?:1/0/││                                                                                     ││                                                │
│  ? unassigned           attention    2m ││                                                                                     ││                                                │
│  reviewer  file-review  unassigned  file││                                                                                     ││                                                │
│                                         ││                                                                                     ││                                                │
│                                         ││                                                                                     ││                                                │
│                                         ││                                                                                     ││                                                │
└─────────────────────────────────────────┘│                                                                                     │└────────────────────────────────────────────────┘
┌Agents───────────────────────────────────┐│                                                                                     │┌Fitness (Entrix Fast) - PASS 91.0% (0/12) 4200ms┐
│4211 ◈ Codex  ACTIVE                     │└─────────────────────────────────────────────────────────────────────────────────────┘│Dimension scores:                               │
│cpu  2.5%  mem 128MB  up 01:35           │┌Run Details──────────────────────────────────────────────────────────────────────────┐│92% code_quality   w18  4/4  █████████████████░ │
│proj project  conf 80%                   ││All                                                                                  ││95% api_contract   w10  2/2  █████████████████░ │
│                                         ││aggregate  2 dirty files                                                             ││                                                │
│9001 ◆ Claude  IDLE                      ││Confidence: 1 exact / 0 inferred / 1 unknown                                         ││                                                │
│cpu  0.1%  mem 96MB  up <ts>         ││Workspace: <repo>                                                              ││                                                │
└─────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
┌Event Stream (all)────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│<ts>  WATCH  modify   crates/harness-monitor/src/tui.rs                                                                                                                       │
│<ts>  HOOK   live-hook-check Edit Write                                                                                                                                       │
│<ts>  GIT    post-commit main                                                                                                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Tab Runs/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unassigned  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  g refresh all  m fast/full  q quit
